<resources>
    <string name="app_name">SensorLogger</string>
    <string name="start">TRACKING</string>
    <string name="stop">NOT TRACKING</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="journal">Journal</string>
    <string name="activity_title">Activity title</string>
    <string name="activity_type">Activity type</string>
    <string name="date">Date</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="notes">Notes</string>
    <string name="add_activity">Add activity</string>
    <string name="notification_title">Today\'s activities</string>
    <string name="notification_text">Please add your daily activities</string>
    <string name="notification_channel_name">Daily activities reminder</string>
    <string name="notification_channel_description">Reminder notifications for adding daily activities</string>
    <string name="start_app">Start application</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="recording_location">This App is using GPS</string>
    <string name="permission_rationale">Permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="delete_alert_title">Delete last 4h of data</string>
    <string name="delete_alert_text">Are you sure you want to delete the last 4 hours of collected data\?</string>
    <string name="send_alert_title">Send data to the server</string>
    <string name="refresh">Refresh</string>
    <string name="save">Save</string>
    <string name="new_activity">New Activity</string>
    <string name="ip_address">Ip Address</string>
    <string name="port">Port</string>
    <string name="automatic">Find automatically</string>
    <string name="manual">Enter manually</string>
    <string name="unknown">unknown</string>
    <string name="collecting_data">Collecting data</string>
    <string name="no_ble_support">This device doesn\'t support Bluetooth, data can\'t be collected from Bluetooth devices</string>
    <string name="settings_change_unavailable">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="lost_connection">Lost connection</string>
    <string name="establish_connection">Established connection</string>
    <string name="lost_watch_connection">Connection to %s was lost.</string>
    <string name="establish_watch_connection">Connection to %s established.</string>
    <string name="sampling_rate">Sampling rate</string>
</resources>
