<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/horizontal_padding"
                    android:paddingTop="@dimen/vertical_padding"
                    android:paddingEnd="@dimen/horizontal_padding"
                    android:paddingBottom="@dimen/vertical_padding"
                    tools:context=".presentation.journalEntry.JournalEntryActivity">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_title"
                        android:paddingBottom="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/journal_activity_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:text="@={vm.journalEntry.activityTitle}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/journal_activity_type_wrapper"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_type"
                        android:paddingBottom="15dp">

                        <AutoCompleteTextView
                            android:id="@+id/journal_activity_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:imeOptions="actionNext"
                            android:onTextChanged="@{vm.getOnTextChangedListener()}"
                            android:singleLine="true"
                            android:text="@={vm.journalEntry.activityType}"
                            app:errorEnabled="true"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:paddingBottom="15dp"
                        app:endIconDrawable="@drawable/ic_arrow_drop_down"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/journal_date_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusableInTouchMode="false"
                            android:onClick="@{vm.getDateOnClickListener()}"
                            android:singleLine="true"
                            android:text="@={vm.journalEntry.dateAsString}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:baselineAligned="false">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_time"
                            android:paddingEnd="8dp"
                            app:endIconDrawable="@drawable/ic_arrow_drop_down"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/journal_time_from_dropdown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:focusableInTouchMode="false"
                                android:onClick="@{vm.getTimeOnClickListener(true)}"
                                android:singleLine="true"
                                android:text="@={vm.journalEntry.startTimeAsString}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/journal_time_to_wrapper"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/end_time"
                            app:endIconDrawable="@drawable/ic_arrow_drop_down"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/journal_time_to_dropdown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:focusableInTouchMode="false"
                                android:onClick="@{vm.getTimeOnClickListener(false)}"
                                android:singleLine="true"
                                android:text="@={vm.journalEntry.endTimeAsString}" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notes"
                        android:paddingBottom="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/journal_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={vm.journalEntry.notes}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            style="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/journal_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsed_app_bar_height"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/journal_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <variable
            name="vm"
            type="rs.ac.bg.etf.rti.sensorlogger.presentation.journalEntry.JournalEntryViewModel" />
    </data>
</layout>